backend/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: digicam-backend
  name: digicam-backend
  namespace: digicam
spec:
  replicas: 1
  selector:
    matchLabels:
      name: digicam-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: digicam-backend
    spec:
      containers:
        - image: localhost:5001/digicam_backend:1
          imagePullPolicy: Always
          name: digicam-backend
          ports:
            - containerPort: 4000
              protocol: TCP
          volumeMounts:
            - name: digicam-fotos
              mountPath: /digicam-fotos
      volumes:
        - name: digicam-fotos
          hostPath: 
            path: /digicam-fotos  

      restartPolicy: Always
      schedulerName: default-scheduler
