backend/k8s/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digicam-routes-ddns
  namespace: digicam
spec:
  ingressClassName: nginx
  rules:
    - host: digicam-bosque.ddns.net
      http:
        paths:
        - pathType: ImplementationSpecific
          path: "/digicam"
          backend:
            service:
              name: digicam-backend-svc
              port:
                number: 4000
        - pathType: ImplementationSpecific
          path: "/"
          backend:
            service:
              name: digicam-frontend-svc
              port:
                number: 80
        - pathType: ImplementationSpecific
          path: "/images"
          backend:
            service:
              name: servidor-imagens-svc
              port:
                number: 80
